# mcp-eval-researcher

./: .env.compose.example  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  check_config.py  docker-compose.yml  implementation_plan.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  stress.yml
agents/: __init__.py  model_router.py  planner.py  prompts.py
cli/: __init__.py  main.py
config/prometheus/: prometheus.yml
core/: __init__.py  citations.py  claim_extractor.py  claim_scoring.py  config.py  contradiction.py  identity.py  metrics.py  models.py  observability.py  pruning.py  query_profile.py  rate_limit.py  report_formatter.py  report_quality.py  retention.py  run_registry.py  runtime_profile.py  source_quality.py  verification.py
core/db/: models.py
core/storage/: postgres.py
core/synthesis/: __init__.py  config_helpers.py  doc_helpers.py  llm_caller.py  metrics.py
docs/: PHASE6_TRANSPORT_CI.md  PHASE7_CORE.md  RELEASE_READINESS.md
evals/: __init__.py  deepeval_node.py  test_init.py
evals/judges/: __init__.py  groq_judge.py  hf_judge.py  llm_judge.py  stub_judge.py
graph/: __init__.py  distributed.py  pipeline.py  runtime.py  state.py
graph/nodes/: __init__.py  eval_gate.py  hitl.py  planner.py  research_ddg.py  research_firecrawl.py  research_pool.py  research_tavily.py  self_correction.py  sub_research.py  synthesizer.py
mcp_server/: __init__.py  client.py  local_server.py  local_stdio_app.py  local_streamable_http_app.py  plugin_registry.py  security.py  sse.py  transport_runtime.py  web_server.py  web_stdio_app.py  web_streamable_http_app.py
memory/: __init__.py  chroma_store.py
scripts/: __init__.py  check_requirements_sync.py  dev-down.ps1  dev-smoke.ps1  dev.ps1  export_requirements.py  local_stack_smoke.py  preflight_git_identity.py  provider_smoke_minimal.py
service/: __init__.py  api.py
specs/: architecture_RFC.md  cleanup_RFC.md
tests/: test_claim_extractor.py  test_synthesis_config_helpers.py  test_synthesis_doc_helpers.py  test_synthesis_llm_caller.py  test_synthesis_metrics.py
tests/e2e/: test_firecrawl_selective.py  test_frontend.py  test_happy_path.py  test_no_results_degrade.py  test_rate_limit_fallback.py
tests/integration/: test_deep_source_integrity.py  test_distributed.py  test_graph_routing.py  test_health_deps.py  test_high_confidence_sources.py  test_judge_provider_switch.py  test_low_confidence_constrained_output.py  test_mcp_client.py  test_mcp_client_http.py  test_model_routing.py  test_non_career_query_format.py  test_observability.py  test_planner.py  test_planner_integration.py  test_postgres_storage.py  test_stream_distributed_fallback.py  test_stream_distributed_strict_fail.py  test_stream_inline_default.py  test_streaming.py  test_tenant_namespace.py
tests/stress/: test_batch.py
tests/unit/: test_branch_failure_policy.py  test_citations.py  test_claim_scoring.py  test_config_transport.py  test_contradiction.py  test_eval_gate.py  test_frontend_textarea.py  test_identity_preflight.py  test_judge_parsing.py  test_local_server.py  test_metrics.py  test_model_router.py  test_planner.py  test_pruning.py  (+14 more)
web-ui/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
(+14 files in other folders)
