[tool.poetry]
name = "cloud-hive"
version = "0.1.0"
description = "Cloud-free cutting-edge research engine with LangGraph, MCP, and DeepEval controls."
authors = ["Cloud Hive Team"]
readme = "README.md"
packages = [
  { include = "agents" },
  { include = "cli" },
  { include = "core" },
  { include = "evals" },
  { include = "graph" },
  { include = "memory" },
  { include = "mcp_server" },
  { include = "service" },
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "*"
pydantic = "^2.11.0"
mcp = ">=1.0.0"
tavily-python = "*"
python-dotenv = "*"
httpx = "*"
trafilatura = "*"
rich = "*"
loguru = "*"
typer = "^0.16.0"
chromadb = "^1.0.0"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
prometheus-client = "^0.22.0"
openai = "^2.20.0"
anthropic = "^0.79.0"
ddgs = "^9.10.0"
groq = "^1.0.0"
huggingface-hub = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "^0.12.0"
mypy = "^1.19.1"

[tool.poetry.group.distributed.dependencies]
celery = "^5.6.2"
redis = "^7.1.1"

[tool.poetry.group.observability.dependencies]
langsmith = "*"
opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp = "^1.39.1"

[tool.poetry.group.storage.dependencies]
alembic = "^1.18.4"
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"

[tool.poetry.group.eval.dependencies]
deepeval = "*"
pydantic-ai = "*"

[tool.poetry.scripts]
cloud-hive = "cli.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
markers = [
  "stress: marks stress tests (excluded from PR CI by default)",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
